# wt-project-base

./: .gitignore  README.md  pyproject.toml
.claude/: .wt-version
.claude/commands/wt/: decompose.md
.claude/skills/wt/decompose/: SKILL.md
openspec/: config.yaml
openspec/changes/archive/2026-03-07-project-init-polish/: tasks.md
openspec/changes/archive/2026-03-07-project-init-polish/specs/project-hygiene/: spec.md
openspec/changes/archive/2026-03-07-project-init-polish/specs/readme/: spec.md
openspec/changes/archive/2026-03-07-project-init-polish/specs/test-suite/: spec.md
openspec/changes/project-init-polish/: design.md  proposal.md
tests/: conftest.py  test_deploy.py  test_feedback.py  test_project_type.py  test_resolver.py
wt_project_base/: __init__.py  base.py  cli.py  deploy.py  feedback.py  project_type.py  resolver.py
wt_project_base/templates/default/: manifest.yaml  project-knowledge.yaml
wt_project_base/templates/default/rules/: data-privacy.md
